--- a/CuiJian/Base.lproj/Main.storyboard
+++ b/CuiJian/Base.lproj/Main.storyboard
@@ -346,7 +346,7 @@
                                 <rect key="frame" x="0.0" y="44" width="320" height="524"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m05-sz-aCa">
-                                        <rect key="frame" x="20" y="0.0" width="280" height="590"/>
+                                        <rect key="frame" x="20" y="0.0" width="280" height="670"/>
                                         <subviews>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ijt-Xf-eXe">
                                                 <rect key="frame" x="0.0" y="20" width="280" height="310"/>
@@ -376,7 +376,7 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="出品" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="6c1-Rt-5gQ">
-                                                <rect key="frame" x="124" y="338" width="33" height="20"/>
+                                                <rect key="frame" x="124" y="378" width="33" height="20"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="Kkz-EV-wjW"/>
@@ -387,14 +387,14 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dongxiLogo" translatesAutoresizingMaskIntoConstraints="NO" id="ty8-jp-fOw">
-                                                <rect key="frame" x="36" y="358" width="208" height="30"/>
+                                                <rect key="frame" x="36" y="401" width="208" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="Ix4-K3-5gL"/>
                                                     <constraint firstAttribute="width" constant="208" id="NP3-Vf-PMT"/>
                                                 </constraints>
                                             </imageView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="创意及实现" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hnN-ZS-ZEP">
-                                                <rect key="frame" x="102" y="396" width="76" height="20"/>
+                                                <rect key="frame" x="102" y="449" width="76" height="20"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="5UF-Z2-YDi"/>
@@ -405,14 +405,14 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ldLogo" translatesAutoresizingMaskIntoConstraints="NO" id="iqt-BE-TAH">
-                                                <rect key="frame" x="88" y="416" width="105" height="30"/>
+                                                <rect key="frame" x="88" y="472" width="105" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="105" id="5ac-te-65v"/>
                                                     <constraint firstAttribute="height" constant="30" id="kXc-2M-dsj"/>
                                                 </constraints>
                                             </imageView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="3D模型" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J4r-2J-gMc">
-                                                <rect key="frame" x="114" y="454" width="52" height="20"/>
+                                                <rect key="frame" x="114" y="520" width="52" height="20"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="Ft5-ch-c7Y"/>
@@ -423,14 +423,14 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xiangLogo" translatesAutoresizingMaskIntoConstraints="NO" id="xUr-WY-OtM">
-                                                <rect key="frame" x="72" y="474" width="137" height="30"/>
+                                                <rect key="frame" x="72" y="543" width="137" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="137" id="YAe-Fv-f2F"/>
                                                     <constraint firstAttribute="height" constant="30" id="bPr-ij-vA3"/>
                                                 </constraints>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yFc-9E-1Sd">
-                                                <rect key="frame" x="0.0" y="528" width="280" height="44"/>
+                                                <rect key="frame" x="0.0" y="609" width="280" height="44"/>
                                                 <color key="backgroundColor" red="0.40784313725490196" green="0.38823529411764707" blue="0.29803921568627451" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="44" id="XeM-D2-if9"/>
@@ -446,24 +446,24 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="xUr-WY-OtM" firstAttribute="centerX" secondItem="m05-sz-aCa" secondAttribute="centerX" id="3ox-rf-fKd"/>
-                                            <constraint firstItem="hnN-ZS-ZEP" firstAttribute="top" secondItem="ty8-jp-fOw" secondAttribute="bottom" constant="8" symbolic="YES" id="4cb-oG-h4K"/>
-                                            <constraint firstItem="xUr-WY-OtM" firstAttribute="top" secondItem="J4r-2J-gMc" secondAttribute="bottom" id="B0g-4z-Utd"/>
+                                            <constraint firstItem="hnN-ZS-ZEP" firstAttribute="top" secondItem="ty8-jp-fOw" secondAttribute="bottom" constant="18" id="4cb-oG-h4K"/>
+                                            <constraint firstItem="xUr-WY-OtM" firstAttribute="top" secondItem="J4r-2J-gMc" secondAttribute="bottom" constant="3" id="B0g-4z-Utd"/>
                                             <constraint firstItem="hnN-ZS-ZEP" firstAttribute="centerX" secondItem="m05-sz-aCa" secondAttribute="centerX" id="Dff-Fc-YAy"/>
-                                            <constraint firstItem="iqt-BE-TAH" firstAttribute="top" secondItem="hnN-ZS-ZEP" secondAttribute="bottom" id="Ffu-P8-veT"/>
-                                            <constraint firstItem="ty8-jp-fOw" firstAttribute="top" secondItem="6c1-Rt-5gQ" secondAttribute="bottom" id="LN0-gq-UMR"/>
+                                            <constraint firstItem="iqt-BE-TAH" firstAttribute="top" secondItem="hnN-ZS-ZEP" secondAttribute="bottom" constant="3" id="Ffu-P8-veT"/>
+                                            <constraint firstItem="ty8-jp-fOw" firstAttribute="top" secondItem="6c1-Rt-5gQ" secondAttribute="bottom" constant="3" id="LN0-gq-UMR"/>
                                             <constraint firstItem="ty8-jp-fOw" firstAttribute="centerX" secondItem="m05-sz-aCa" secondAttribute="centerX" id="N3L-bM-tQO"/>
-                                            <constraint firstAttribute="height" constant="590" id="Nkw-7I-Z2Z"/>
-                                            <constraint firstItem="J4r-2J-gMc" firstAttribute="top" secondItem="iqt-BE-TAH" secondAttribute="bottom" constant="8" symbolic="YES" id="PeH-lf-GPc"/>
+                                            <constraint firstAttribute="height" constant="670" id="Nkw-7I-Z2Z"/>
+                                            <constraint firstItem="J4r-2J-gMc" firstAttribute="top" secondItem="iqt-BE-TAH" secondAttribute="bottom" constant="18" id="PeH-lf-GPc"/>
                                             <constraint firstItem="iqt-BE-TAH" firstAttribute="centerX" secondItem="m05-sz-aCa" secondAttribute="centerX" id="Pet-F6-DKD"/>
                                             <constraint firstItem="6c1-Rt-5gQ" firstAttribute="centerX" secondItem="m05-sz-aCa" secondAttribute="centerX" id="R1H-4a-zPx"/>
                                             <constraint firstItem="J4r-2J-gMc" firstAttribute="centerX" secondItem="m05-sz-aCa" secondAttribute="centerX" id="T8C-UE-zEZ"/>
                                             <constraint firstAttribute="trailing" secondItem="yFc-9E-1Sd" secondAttribute="trailing" id="WF7-pf-xlE"/>
                                             <constraint firstItem="yFc-9E-1Sd" firstAttribute="leading" secondItem="m05-sz-aCa" secondAttribute="leading" id="bGG-Bk-Kad"/>
                                             <constraint firstItem="Ijt-Xf-eXe" firstAttribute="width" secondItem="m05-sz-aCa" secondAttribute="width" id="ddM-ld-5r9"/>
-                                            <constraint firstItem="6c1-Rt-5gQ" firstAttribute="top" secondItem="Ijt-Xf-eXe" secondAttribute="bottom" constant="8" symbolic="YES" id="izM-I7-PZ3"/>
+                                            <constraint firstItem="6c1-Rt-5gQ" firstAttribute="top" secondItem="Ijt-Xf-eXe" secondAttribute="bottom" constant="48" id="izM-I7-PZ3"/>
                                             <constraint firstItem="Ijt-Xf-eXe" firstAttribute="centerX" secondItem="m05-sz-aCa" secondAttribute="centerX" id="tdT-Fy-PW2"/>
                                             <constraint firstItem="Ijt-Xf-eXe" firstAttribute="top" secondItem="m05-sz-aCa" secondAttribute="top" constant="20" symbolic="YES" id="u1z-ls-PPf"/>
-                                            <constraint firstItem="yFc-9E-1Sd" firstAttribute="top" secondItem="xUr-WY-OtM" secondAttribute="bottom" constant="24" id="vSG-at-YEA"/>
+                                            <constraint firstItem="yFc-9E-1Sd" firstAttribute="top" secondItem="xUr-WY-OtM" secondAttribute="bottom" constant="36" id="vSG-at-YEA"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -511,7 +511,7 @@
             </objects>
             <point key="canvasLocation" x="2018" y="640"/>
         </scene>
-        <!--专辑试听-->
+        <!--新专辑《光冻》-->
         <scene sceneID="R3b-nb-gSF">
             <objects>
                 <viewController storyboardIdentifier="songViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vQp-Ch-gUU" customClass="SongViewController" customModule="CuiJian" customModuleProvider="target" sceneMemberID="viewController">
@@ -592,7 +592,7 @@
                             <constraint firstItem="8Qw-gR-Ego" firstAttribute="centerX" secondItem="zH5-TD-gdc" secondAttribute="centerX" id="tEs-nB-RtU"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="专辑试听" id="ePW-1T-o3C">
+                    <navigationItem key="navigationItem" title="新专辑《光冻》" id="ePW-1T-o3C">
                         <barButtonItem key="leftBarButtonItem" image="backArrow" style="done" id="8P2-4g-o78">
                             <color key="tintColor" red="0.53333333333333333" green="0.51372549019607838" blue="0.42745098039215684" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
